# ableton-mcp

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CI-FIX-ANALYSIS.md  CONTRIBUTING.md  DEEP_AUDIT.md  FINAL_SUMMARY.md  GAP-ANALYSIS.md  INSTALL.md  LICENSE  MASTER-COMPLETION-SUMMARY.md  MIXING_ANALYSIS.md  PHASE2_3_SUMMARY.md  PHASE2_FINDINGS.md  PUBLICATION-READY.md  PUBLISH-TO-PYPI.sh  PYPI-UPLOAD-STEPS.md  README.md  pyproject.toml  requirements.txt  server.py  test_fastmcp.py  v1.0.0-RELEASE-SUMMARY.md
.github/: PUBLISH.md
.github/workflows/: ci.yml
src/ableton_mcp/: __init__.py  __main__.py  config.py  server.py
src/ableton_mcp/core/: device_mappings.py  errors.py  models.py  music_theory.py
src/ableton_mcp/osc/: __init__.py  addresses.py  client.py  dispatcher.py
src/ableton_mcp/resources/: __init__.py
src/ableton_mcp/tools/: __init__.py  batch_operations.py  clips.py  device_control.py  devices.py  metering.py  mixer.py  music_generation.py  tracks.py  transport.py  utils.py
tests/: __init__.py  conftest.py  test_mixing_workflows.py  test_music_theory.py  test_osc_bridge.py
tests/integration/: __init__.py
